--- a/statefulset.yaml
+++ b/statefulset.yaml
@@ -12,7 +12,7 @@ subjects:
     name: default
     namespace: infra
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name     : mongo-prod
